Optimizing RNN gap-clas for mobile and retraining

--- a/GapClassifier-BiRNN.ipynb
+++ b/GapClassifier-BiRNN.ipynb
@@ -261,7 +261,7 @@
     "            images_seq[i] = [imgprocess(img[:, loc * slider_step: loc * slider_step + slider[1]].flatten())\n",
     "                             for loc in range(length[i])]\n",
     "            \n",
-    "            targets_seq[i] = np.ones((length[i], 1)) * NEG\n",
+    "            targets_seq[i] = np.ones((length[i])) * NEG\n",
     "            for offset in range(gap_span):\n",
     "                ind = indices[i] + (-(offset % 2) * offset // 2) + ((1 - offset%2) * offset // 2) \n",
     "                \n",
@@ -338,7 +338,7 @@
     "            input_seq[i][:res['length'].values[i]] = img\n",
     "        \n",
     "        # Need to pad according to the maximum length output sequence\n",
-    "        targets = np.ones([batch_size, max_length, 1], dtype=np.float32) * PAD\n",
+    "        targets = np.ones([batch_size, max_length], dtype=np.float32) * PAD\n",
     "        for i, target in enumerate(targets):\n",
     "            target[:res['length'].values[i]] = res['targets'].values[i]\n",
     "        \n",
@@ -439,8 +439,8 @@
     "                        dtype=tf.int32,   # EDITED: tf.int32\n",
     "                        name='length')\n",
     "# required for training, not required for testing and application\n",
-    "targets = tf.placeholder(shape=(None, None, 1),\n",
-    "                         dtype=tf.float32,\n",
+    "targets = tf.placeholder(shape=(None, None),\n",
+    "                         dtype=tf.int64,\n",
     "                         name='targets')\n",
     "# Dropout value\n",
     "keep_prob = tf.placeholder(tf.float32, name='keep_prob')"
@@ -511,10 +511,6 @@
    },
    "outputs": [],
    "source": [
-    "W = tf.Variable(tf.random_normal([2*rnn_units, 1]),\n",
-    "                name='W')\n",
-    "# b = tf.Variable(tf.random_normal([n_classes]))\n",
-    "\n",
     "# Bidirectional RNN\n",
     "bi_outputs, _ = tf.nn.bidirectional_dynamic_rnn(\n",
     "    cell_fw = cell_fw,\n",
@@ -527,11 +523,10 @@
     "\n",
     "# pred = tf.matmul(outputs, W)\n",
     "# pred = tf.scan(lambda a, x: tf.matmul(x, W), outputs, infer_shape=False)\n",
-    "pred = tf.layers.dense(inputs=outputs,\n",
-    "                       units=1,\n",
-    "                       activation=tf.sigmoid,\n",
+    "pred = tf.layers.dense(inputs=outputs\n",
+    "                       units=2,\n",
     "                       name='pred')\n",
-    "prediction = tf.round(pred, name='prediction')"
+    "prediction = tf.argmax(pred, axis=-1, name='prediction')"
    ]
   },
   {
@@ -582,9 +577,10 @@
     "# Define loss and optimizer\n",
     "# loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=pred, labels=targets), name='loss')\n",
     "weights = tf.multiply(targets, POS_WEIGHT) + 1\n",
-    "loss = tf.reduce_mean(tf.losses.sigmoid_cross_entropy(logits=pred,\n",
-    "                                                      multi_class_labels=targets,\n",
-    "                                                      weights=weights), name='loss')\n",
+    "loss = tf.reduce_mean(tf.losses.sparse_softmax_cross_entropy(\n",
+    "    logits=pred,\n",
+    "    labels=targets,\n",
+    "    weights=weights), name='loss')\n",
     "train_step = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(loss, name='train_step')\n",
     "\n",
     "# Evaluate model\n",
