New method of loading more char images (around 6k)

--- a/CharClassifier.ipynb
+++ b/CharClassifier.ipynb
@@ -53,6 +53,7 @@
     "from IPython.display import clear_output, Image, display, HTML\n",
     "\n",
     "# Helpers\n",
+    "from ocr.datahelpers import loadCharsData, correspondingShuffle\n",
     "from ocr.helpers import implt\n",
     "from ocr.mlhelpers import TrainingPlot, DataSet\n",
     "from ocr.imgtransform import coordinates_remap\n",
@@ -156,17 +157,14 @@
     "    CLAS = CZ_CLAS\n",
     "\n",
     "# dimension 64x64 = 4096\n",
-    "images = np.genfromtxt('data/charclas/' + LANG + '-data.csv', delimiter=',')\n",
-    "labels = np.genfromtxt('data/charclas/' + LANG + '-labels.csv', delimiter=',')\n",
+    "images, labels = loadCharsData(\n",
+    "    charloc='data/charclas/',\n",
+    "    wordloc='data/words/',\n",
+    "    lang=LANG,\n",
+    "    useWords=True)\n",
     "labels = np.reshape(labels, (len(labels), 1))\n",
     "\n",
-    "# Regularization of images\n",
-    "images[images < 40] = 0\n",
-    "images = images.astype(np.float32)\n",
-    "images = np.multiply(images, 1.0 / 255.0)\n",
-    "\n",
-    "print(\"CSV data files loaded.\")\n",
-    "print(\"Number of images: \" + str(len(images)))\n",
+    "images, labels = correspondingShuffle(images, labels)\n",
     "\n",
     "# Splitting into train and test data\n",
     "div = int(0.80 * len(images))\n",
@@ -204,7 +202,7 @@
     }
    ],
    "source": [
-    "num_new_data = 10\n",
+    "num_new_data = 2\n",
     "fac_alpha = 1.5\n",
     "fac_sigma = 0.07\n",
     "\n",
@@ -362,6 +360,7 @@
    "execution_count": 9,
    "metadata": {
     "autoscroll": false,
+    "collapsed": true,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
