Correct TensorBorad step tracking

--- a/CharClassifier-RNN.ipynb
+++ b/CharClassifier-RNN.ipynb
@@ -484,7 +484,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Help functions for standard layers\n",
@@ -1481,8 +1483,8 @@
     "            accTrain, trSum = sess.run([accuracy, merged], feed_dict=fd)\n",
     "                \n",
     "            trainPlot.updateAcc(accTest, accTrain, i_batch // TEST_ITER)\n",
-    "            test_writer.add_summary(teSum, i)\n",
-    "            train_writer.add_summary(trSum, i)\n",
+    "            test_writer.add_summary(teSum, i_batch)\n",
+    "            train_writer.add_summary(trSum, i_batch)\n",
     "\n",
     "        if i_batch % SAVE_ITER == 0:\n",
     "            saver.save(sess, save_loc)\n",
