Working on project presentation - esthetical changes

--- a/CharClassifier-RNN.ipynb
+++ b/CharClassifier-RNN.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Seq2Seq - Char Classification\n",
+    "# BiRNN - Char Classification\n",
     "Using TensorFlow\n",
     "\n",
     "### TODO:\n",
