Working on model evaluator + normalization, charSeg updates

--- a/GapClassification.ipynb
+++ b/GapClassification.ipynb
@@ -163,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Cycler:\n",
