Creating OCR evaluator

--- a/OCR-Evaluator.ipynb
+++ b/OCR-Evaluator.ipynb
@@ -4,21 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Character Classification\n",
-    "This notebook contains all steps of OCR"
+    "# Evaluating OCR Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Segmantation model:\n",
+      "INFO:tensorflow:Restoring parameters from models/gap-clas/CNN-CG\n",
+      "INFO:tensorflow:Restoring parameters from models/gap-clas/large/CNN-CG\n",
+      "INFO:tensorflow:Restoring parameters from models/gap-clas/RNN/Bi-RNN\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "import cv2\n",
+    "import time\n",
+    "import math\n",
+    "from collections import Counter\n",
+    "import unidecode\n",
     "\n",
     "# Import Widgets\n",
     "from ipywidgets import Button, Text, HBox, VBox\n",
@@ -43,15 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Settings\n",
-    "LANG = 'cz'\n",
-    "LOC = 'models/char-clas/' + LANG + '/CharClassifier'"
+    "LANG = 'en'"
    ]
   },
   {
@@ -63,19 +76,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from models/char-clas/cz/CharClassifier\n"
+      "INFO:tensorflow:Restoring parameters from models/char-clas/en/CharClassifier\n",
+      "INFO:tensorflow:Restoring parameters from models/char-clas/en/Bi-RNN/model_2\n",
+      "INFO:tensorflow:Restoring parameters from models/char-clas/en/Bi-RNN/model_1\n",
+      "INFO:tensorflow:Restoring parameters from models/word-clas/en/WordClassifier\n"
      ]
     }
    ],
    "source": [
-    "charClass = Graph(LOC)"
+    "charClass_1 = Graph('models/char-clas/' + LANG + '/CharClassifier')\n",
+    "charClass_2 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_2', 'prediction')\n",
+    "charClass_3 = Graph('models/char-clas/' + LANG + '/Bi-RNN/model_1', 'prediction')\n",
+    "\n",
+    "wordClass = Graph('models/word-clas/' + LANG + '/WordClassifier', 'prediction_infer')"
    ]
   },
   {
@@ -87,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,24 +115,163 @@
      "output_type": "stream",
      "text": [
       "Loading words...\n",
-      "-> Number of words: 235\n"
+      "-> Number of words: 250\n",
+      "Number of chars: 1228\n"
      ]
     }
    ],
    "source": [
-    "images, labels = loadWordsData('data/test_words', loadGaplines=False)"
+    "images, labels = loadWordsData('data/test_words/' + LANG, loadGaplines=False)\n",
+    "\n",
+    "if LANG == 'en':\n",
+    "    for i in range(len(labels)):\n",
+    "        labels[i] = unidecode.unidecode(labels[i])\n",
+    "        \n",
+    "print('Number of chars:', sum(len(l) for l in labels))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple UI using widgets"
+    "# Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Load Words\n",
+    "WORDS = {}\n",
+    "with open('data/' + LANG + '_50k.txt') as f:\n",
+    "    for line in f:\n",
+    "        if LANG == 'en':\n",
+    "            WORDS[unidecode.unidecode(line.split(\" \")[0])] = int(line.split(\" \")[1])\n",
+    "        else:\n",
+    "            WORDS[line.split(\" \")[0]] = int(line.split(\" \")[1])\n",
+    "WORDS = Counter(WORDS)\n",
+    "\n",
+    "def P(word, N=sum(WORDS.values())): \n",
+    "    \"Probability of `word`.\"\n",
+    "    return WORDS[word] / N\n",
+    "\n",
+    "def correction(word): \n",
+    "    \"Most probable spelling correction for word.\"\n",
+    "    if word in WORDS:\n",
+    "        return word\n",
+    "    return max(candidates(word), key=P)\n",
+    "\n",
+    "def candidates(word): \n",
+    "    \"Generate possible spelling corrections for word.\"\n",
+    "    return (known([word]) or known(edits1(word)) or known(edits2(word)) or [word])\n",
+    "\n",
+    "def known(words): \n",
+    "    \"The subset of `words` that appear in the dictionary of WORDS.\"\n",
+    "    return set(w for w in words if w in WORDS)\n",
+    "\n",
+    "def edits1(word):\n",
+    "    \"All edits that are one edit away from `word`.\"\n",
+    "    \n",
+    "    if LANG == 'cz':\n",
+    "        letters = 'aábcčdďeéěfghiíjklmnňoópqrřsštťuúůvwxyýzž'\n",
+    "    else:\n",
+    "        letters = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "    splits     = [(word[:i], word[i:])    for i in range(len(word) + 1)]\n",
+    "    deletes    = [L + R[1:]               for L, R in splits if R]\n",
+    "    transposes = [L + R[1] + R[0] + R[2:] for L, R in splits if len(R)>1]\n",
+    "    replaces   = [L + c + R[1:]           for L, R in splits if R for c in letters]\n",
+    "    inserts    = [L + c + R               for L, R in splits for c in letters]\n",
+    "    return set(deletes + transposes + replaces + inserts)\n",
+    "\n",
+    "def edits2(word): \n",
+    "    \"All edits that are two edits away from `word`.\"\n",
+    "    return (e2 for e1 in edits1(word) for e2 in edits1(e1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class WordCycler:\n",
+    "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
+    "    def __init__(self, images, labels, charClass):\n",
+    "        self.images = images\n",
+    "        self.labels = labels\n",
+    "        self.charClass = charClass\n",
+    "        \n",
+    "        self.totalChars = sum([len(l) for l in labels])\n",
+    "        \n",
+    "        self.evaluateAll()\n",
+    "        \n",
+    "    def recogniseWord(self, img):\n",
+    "        slider = (60, 15)\n",
+    "        length = img.shape[1]//slider[1]\n",
+    "        \n",
+    "        input_seq = np.zeros((1, length, slider[0] * slider[1]), dtype=np.float32)\n",
+    "        input_seq[0][:] = [img[:, loc * slider[1]: (loc+1) * slider[1]].flatten()\n",
+    "                           for loc in range(length)]                                \n",
+    "        input_seq = input_seq.swapaxes(0, 1)\n",
+    "        \n",
+    "        targets = np.zeros((1, 1), dtype=np.int32)                        \n",
+    "        pred = self.charClass.eval_feed({'encoder_inputs:0': input_seq,\n",
+    "                                         'encoder_inputs_length:0': [length],\n",
+    "                                         'decoder_targets:0': targets,\n",
+    "                                         'keep_prob:0': 1})[0]\n",
+    "                  \n",
+    "        word = ''\n",
+    "        for i in pred:\n",
+    "            if word == 1:\n",
+    "                break\n",
+    "            else:\n",
+    "                word += idx2char(i)\n",
+    "\n",
+    "        return word.lower()\n",
+    "    \n",
+    "    \n",
+    "    def countCorrect(self, pred, label):\n",
+    "        correct = 0\n",
+    "        for i in range(min(len(pred), len(label))):\n",
+    "            if pred[i] == label.lower()[i]:\n",
+    "                correct += 1\n",
+    "                \n",
+    "        return correct            \n",
+    "        \n",
+    "\n",
+    "    def evaluateAll(self):\n",
+    "        self.evaluate()\n",
+    "        \n",
+    "\n",
+    "    def evaluate(self):\n",
+    "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
+    "        print()\n",
+    "        print(\"STATS: Seq2Seq\")\n",
+    "        print(self.labels[0], ':', self.recogniseWord(self.images[0]))\n",
+    "        start_time = time.time()\n",
+    "        correct = 0\n",
+    "        correctWithCorrection = 0\n",
+    "        for i in range(len(self.images)):\n",
+    "            word = self.recogniseWord(self.images[i])\n",
+    "            correct += self.countCorrect(word,\n",
+    "                                         self.labels[i])\n",
+    "            correctWithCorrection += self.countCorrect(correction(word),\n",
+    "                                                       self.labels[i])\n",
+    "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
+    "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
+    "        print(\"Accuracy with correction: %s %%\" % round(correctWithCorrection/self.totalChars * 100, 4))\n",
+    "        print(\"--- %s seconds ---\" % round(time.time() - start_time, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -120,34 +279,49 @@
    "source": [
     "class Cycler:\n",
     "    \"\"\" Cycle through the words and recognise them \"\"\" \n",
-    "    def __init__(self, images, labels, charClass, gapRNN=False, charRNN=False):\n",
+    "    def __init__(self, images, labels, charClass, charRNN=False):\n",
     "        self.images = images\n",
     "        self.labels = labels\n",
     "        self.charClass = charClass\n",
-    "        self.gapRNN = gapRNN\n",
     "        self.charRNN = charRNN\n",
-    "        print(labels[0], ':', self.recogniseWord(images[0]))\n",
     "        \n",
-    "    def recogniseWord(self, img):\n",
-    "        img = cv2.copyMakeBorder(img, 0, 0, 15, 15,\n",
+    "        self.totalChars = sum([len(l) for l in labels])\n",
+    "        \n",
+    "        self.evaluateAll()\n",
+    "        \n",
+    "    def recogniseWord(self, img, gapRNN=False, norm1=False, norm2=False, large=False):\n",
+    "        if large:\n",
+    "            border = 60\n",
+    "        else:\n",
+    "            border = 15\n",
+    "        img = cv2.copyMakeBorder(img,\n",
+    "                                 0, 0, border, border,\n",
     "                                 cv2.BORDER_CONSTANT,\n",
     "                                 value=[0, 0, 0])\n",
-    "        gaps = charSeg.segmentation(img, RNN=self.gapRNN)\n",
-    "        print(gaps)\n",
+    "        if norm1:\n",
+    "            gapImg = (img - np.mean(img)) / max(np.std(img), 1.0 / math.sqrt(img.size))\n",
+    "        else:\n",
+    "            gapImg = img\n",
+    "        gaps = charSeg.segmentation(gapImg, RNN=gapRNN, large=large)\n",
     "        \n",
     "        chars = []\n",
     "        for i in range(len(gaps)-1):\n",
     "            char = img[:, gaps[i]:gaps[i+1]]\n",
     "            char, dim = letterNorm(char, dim=True)\n",
     "            # TODO Test different values\n",
-    "            if dim[0] > 7 and dim[1] > 7:\n",
+    "            if dim[0] > 4 and dim[1] > 4:\n",
+    "                if norm2:\n",
+    "                    char = (char - np.mean(char)) / max(np.std(char), 1.0 / math.sqrt(char.size))\n",
+    "                else:\n",
+    "                    char = char\n",
     "                chars.append(char.flatten())\n",
     "                \n",
     "        chars = np.array(chars)\n",
     "        \n",
     "        if self.charRNN:\n",
-    "            pred = self.charClass.eval_feed({'inputs:0': chars,\n",
-    "                                             'length:0': [len(chars)]})\n",
+    "            pred = self.charClass.eval_feed({'inputs:0': [chars],\n",
+    "                                             'length:0': [len(chars)],\n",
+    "                                             'keep_prob:0': 1})[0]\n",
     "        else:\n",
     "            pred = self.charClass.run(chars)\n",
     "        \n",
@@ -155,35 +329,154 @@
     "        for c in pred:\n",
     "            # word += CHARS[charIdx]\n",
     "            word += idx2char(c)\n",
-    "        return word\n",
+    "        \n",
+    "        return word.lower()\n",
+    "    \n",
+    "    \n",
+    "    def countCorrect(self, pred, label):\n",
+    "        correct = 0\n",
+    "        for i in range(min(len(pred), len(label))):\n",
+    "            if pred[i] == label.lower()[i]:\n",
+    "                correct += 1\n",
+    "                \n",
+    "        return correct            \n",
     "        \n",
     "\n",
-    "    def evaluate(self):\n",
+    "    def evaluateAll(self):\n",
+    "        self.evaluate(True, True, False)\n",
+    "#         self.evaluate(True, True, True)\n",
+    "        self.evaluate(False, False, False, False)\n",
+    "        self.evaluate(False, False, False, True)\n",
+    "        \n",
+    "\n",
+    "    def evaluate(self, gapRNN, norm1, norm2, large=False):\n",
     "        \"\"\" Evaluate accuracy of the word classification \"\"\"\n",
-    "        pass"
+    "        print()\n",
+    "        print(\"STATS: gapRNN - %s, charRNN - %s, gapNorm - %s, charNorm - %s\" %\n",
+    "              (gapRNN, self.charRNN, norm1, norm2))\n",
+    "        print(self.labels[0], ':', self.recogniseWord(self.images[0], gapRNN, norm1, norm2, large))\n",
+    "        start_time = time.time()\n",
+    "        correct = 0\n",
+    "        correctWithCorrection = 0\n",
+    "        for i in range(len(self.images)):\n",
+    "            word = self.recogniseWord(self.images[i], gapRNN, norm1, norm2, large)\n",
+    "            correct += self.countCorrect(word,\n",
+    "                                         self.labels[i])\n",
+    "            correctWithCorrection += self.countCorrect(correction(word),\n",
+    "                                                       self.labels[i])\n",
+    "        print(\"Correct/Total: %s / %s\" % (correct, self.totalChars))\n",
+    "        print(\"Accuracy: %s %%\" % round(correct/self.totalChars * 100, 4))\n",
+    "        print(\"Accuracy with correction: %s %%\" %\n",
+    "              round(correctWithCorrection/self.totalChars * 100, 4))\n",
+    "        print(\"--- %s seconds ---\" % round(time.time() - start_time, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17, 46, 87, 125]\n",
-      "Zda : pda\n"
+      "\n",
+      "STATS: gapRNN - True, charRNN - False, gapNorm - True, charNorm - False\n",
+      "urges : srpes\n",
+      "Correct/Total: 736 / 1228\n",
+      "Accuracy: 59.9349 %\n",
+      "Accuracy with correction: 64.1694 %\n",
+      "--- 60.81 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - False, charRNN - False, gapNorm - False, charNorm - False\n",
+      "urges : trrps\n",
+      "Correct/Total: 673 / 1228\n",
+      "Accuracy: 54.8046 %\n",
+      "Accuracy with correction: 59.5277 %\n",
+      "--- 49.35 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - False, charRNN - False, gapNorm - False, charNorm - False\n",
+      "urges : zrqes\n",
+      "Correct/Total: 642 / 1228\n",
+      "Accuracy: 52.2801 %\n",
+      "Accuracy with correction: 53.5831 %\n",
+      "--- 90.76 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - True, charRNN - True, gapNorm - True, charNorm - False\n",
+      "urges : srqoz\n",
+      "Correct/Total: 571 / 1228\n",
+      "Accuracy: 46.4984 %\n",
+      "Accuracy with correction: 56.1889 %\n",
+      "--- 70.74 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False\n",
+      "urges : rrrps\n",
+      "Correct/Total: 670 / 1228\n",
+      "Accuracy: 54.5603 %\n",
+      "Accuracy with correction: 57.1661 %\n",
+      "--- 57.22 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False\n",
+      "urges : krges\n",
+      "Correct/Total: 636 / 1228\n",
+      "Accuracy: 51.7915 %\n",
+      "Accuracy with correction: 53.013 %\n",
+      "--- 93.66 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - True, charRNN - True, gapNorm - True, charNorm - False\n",
+      "urges : csryss\n",
+      "Correct/Total: 283 / 1228\n",
+      "Accuracy: 23.0456 %\n",
+      "Accuracy with correction: 38.4365 %\n",
+      "--- 71.06 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False\n",
+      "urges : rerys\n",
+      "Correct/Total: 663 / 1228\n",
+      "Accuracy: 53.9902 %\n",
+      "Accuracy with correction: 56.5961 %\n",
+      "--- 51.24 seconds ---\n",
+      "\n",
+      "STATS: gapRNN - False, charRNN - True, gapNorm - False, charNorm - False\n",
+      "urges : kryse\n",
+      "Correct/Total: 628 / 1228\n",
+      "Accuracy: 51.1401 %\n",
+      "Accuracy with correction: 52.2801 %\n",
+      "--- 94.36 seconds ---\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Cycler at 0x7fa768be0898>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Class cycling through words\n",
-    "cycler = Cycler(images,\n",
-    "                labels,\n",
-    "                charClass,\n",
-    "                gapRNN=False,\n",
-    "                charRNN=False)"
+    "\n",
+    "# WordCycler(images,\n",
+    "#            labels,\n",
+    "#            wordClass)\n",
+    "\n",
+    "Cycler(images,\n",
+    "       labels,\n",
+    "       charClass_1,\n",
+    "       charRNN=False)\n",
+    "\n",
+    "Cycler(images,\n",
+    "       labels,\n",
+    "       charClass_2,\n",
+    "       charRNN=True)\n",
+    "\n",
+    "Cycler(images,\n",
+    "       labels,\n",
+    "       charClass_3,\n",
+    "       charRNN=True)"
    ]
   }
  ],
