Retraining models + changes in file structure

--- a/GapClassifier-BiRNN.ipynb
+++ b/GapClassifier-BiRNN.ipynb
@@ -164,13 +164,7 @@
     "BATCH_SIZE = 32\n",
     "# EPOCH = 2000                       # \"Number\" of batches in epoch\n",
     "\n",
-    "\n",
-    "# Function for preprocessing images\n",
-    "graph = Graph('models/gap-clas/CNN-CG',\n",
-    "              operation='h_conv2_flat')\n",
-    "def imgPreprocessor(x):\n",
-    "    # Cut returned data to N_INPUT size - no need for everything\n",
-    "    return graph.run(np.reshape(x, (1, 1800)))[0][:N_INPUT]"
+    "save_loc = 'models/gap-clas/RNN/Bi-RNN-dense'"
    ]
   },
   {
@@ -1428,7 +1422,7 @@
     "            trainPlot.updateAcc(accTest, accTrain, i_batch // TEST_ITER)\n",
     "\n",
     "        if i_batch % SAVE_ITER == 0:\n",
-    "            saver.save(sess, 'models/gap-clas/RNN/Bi-RNN')\n",
+    "            saver.save(sess, save_loc)\n",
     "        \n",
     "#         if i_batch % EPOCH == 0:\n",
     "#             fd_test = test_iterator.next_feed(BATCH_SIZE)\n",
@@ -1441,7 +1435,7 @@
     "#             print()\n",
     "\n",
     "except KeyboardInterrupt:\n",
-    "    saver.save(sess, 'models/gap-clas/RNN/Bi-RNN')\n",
+    "    saver.save(sess, save_loc)\n",
     "    print('Training interrupted, model saved.')\n",
     "\n",
     "\n",
