Change in correspondingShuffle implementation Now it takes array of numpy arrays

--- a/Char-DataCSV.ipynb
+++ b/Char-DataCSV.ipynb
@@ -62,7 +62,7 @@
     "    print(\"Images: %d\" % len(labels))\n",
     "    print(\"For %d different labels\" % len(chars))\n",
     "\n",
-    "    images, labels = correspondingShuffle(images, labels)    \n",
+    "    images, labels = correspondingShuffle([images, labels])    \n",
     "\n",
     "    # Create CSV files\n",
     "    with open(dataloc + lang + '-data.csv', 'w') as csvfile:\n",
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
