--- a/CharClassifier-RNN.ipynb
+++ b/CharClassifier-RNN.ipynb
@@ -241,7 +241,7 @@
     "\n",
     "\n",
     "# Separate images in such a way that there is each letter at leas once (in train and test set)\n",
-    "images, labels = correspondingShuffle(images, labels)\n",
+    "images, labels = correspondingShuffle([images, labels])\n",
     "\n",
     "letters = np.empty(CLAS, dtype=object)\n",
     "for i in range(CLAS):\n",
@@ -1538,7 +1538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "name": "CharClassifier.ipynb"
  },
