--- a/CharClassifier.ipynb
+++ b/CharClassifier.ipynb
@@ -29,8 +29,8 @@
      "output_type": "stream",
      "text": [
       "OpenCV: 3.1.0\n",
-      "Numpy: 1.13.1\n",
-      "TensorFlow: 1.3.0\n"
+      "Numpy: 1.13.3\n",
+      "TensorFlow: 1.4.0\n"
      ]
     }
    ],
@@ -68,7 +68,6 @@
    "execution_count": 2,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -101,7 +100,6 @@
    "execution_count": 3,
    "metadata": {
     "autoscroll": false,
-    "collapsed": true,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
@@ -167,7 +165,7 @@
     "    useWords=True)\n",
     "labels = np.reshape(labels, (len(labels), 1))\n",
     "\n",
-    "images, labels = correspondingShuffle(images, labels)\n",
+    "images, labels = correspondingShuffle([images, labels])\n",
     "\n",
     "# Splitting into train and test data\n",
     "div = int(0.85 * len(images))\n",
@@ -1304,7 +1302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "name": "CharClassifier.ipynb"
  },
