--- a/Gap-DataCSV.ipynb
+++ b/Gap-DataCSV.ipynb
@@ -59,7 +59,7 @@
     "labels = np.concatenate([np.zeros(len(img0)), np.ones(len(img1))])\n",
     "\n",
     "# Shuffle data\n",
-    "images, labels = correspondingShuffle(images, labels)    \n",
+    "images, labels = correspondingShuffle([images, labels])    \n",
     "\n",
     "# Create CSV files\n",
     "with open('data/gapdet/data.csv', 'w') as csvfile:\n",
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
