--- a/GapClassifier-Attention-RNN.ipynb
+++ b/GapClassifier-Attention-RNN.ipynb
@@ -177,7 +177,7 @@
    ],
    "source": [
     "# Shuffle data\n",
-    "images, gaplines = correspondingShuffle(images, gaplines)\n",
+    "images, gaplines = correspondingShuffle([images, gaplines])\n",
     "\n",
     "for i in range(len(images)):\n",
     "    # Add border and offset gaplines - RUN ONLY ONCE\n",
@@ -1543,7 +1543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "name": "CharClassifier-BiRNN.ipynb"
  },
