--- a/GapClassifier-BiRNN.ipynb
+++ b/GapClassifier-BiRNN.ipynb
@@ -178,7 +178,7 @@
    ],
    "source": [
     "# Shuffle data\n",
-    "images_seq, labels_seq = correspondingShuffle(images_seq, labels_seq)\n",
+    "images_seq, labels_seq = correspondingShuffle([images_seq, labels_seq])\n",
     "\n",
     "    \n",
     "# Split data on train and test dataset\n",
@@ -1388,7 +1388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "name": "CharClassifier-BiRNN.ipynb"
  },
